# LeafDiseaseClassification

./: .gitignore  Leaf_Disease_Fastai.ipynb  README.md  config.py  dataset.py  eda.py  engine.py  log.txt  model.py  pyproject.toml  train.py
notebooks/: Untitled.ipynb
src/: config.py  create_fold.py  dataset.py  engine.py  inference.py  model.py  modules.py  predict.py  train.py
