[project]
name = "leafdiseaseclassification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "albumentations>=1.4.24",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "wandb>=0.19.1",
    "tqdm>=4.67.1",
    "python-dotenv>=1.0.1",
    "accelerate>=1.2.1",
]
